home layout issue

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -1,4 +1,4 @@
-.page-home {
+main .page-home {
   padding-top: 0;
   /* ------------------------------------------ */
   .splash-screen {
